kqed_dev4/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Industry_Category__c</fullName>
        <label>Industry Category</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques/Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art/Galleries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar/Recreational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cafe/Eaterie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carribean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering/Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children/Maternity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College/University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Classes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Unions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary/Kitchen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink/Water/Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics/Computers/Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installments_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installments Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lap_Ma_Gi__c</fullName>
        <description>this is from the classifications object</description>
        <label>TAG: Lapsed Mail Gift</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastDonationDate__c</fullName>
        <label>Last Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Exchange_Date__c</fullName>
        <label>Last Exchange Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Giveaway_Date__c</fullName>
        <label>Last Giveaway Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Giveaway__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leadership_Circle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leadership Circle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Society__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy Society</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LifetimeDonationHistory_Amount__c</fullName>
        <label>Lifetime Donation History (Amount)</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LifetimeDonationHistory_Number__c</fullName>
        <label>Lifetime Donation History (Number)</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Logo_Url__c</fullName>
        <description>This is the URL for the logo. This field is automatically populated by the image upload.</description>
        <inlineHelpText>This is the URL for the logo. This field is automatically populated by the image upload.</inlineHelpText>
        <label>Logo Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Long_Val__c</fullName>
        <description>This is from the classifications object</description>
        <label>TAG: Longterm Value</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MMI_Account_Manager__c</fullName>
        <inlineHelpText>MMI User</inlineHelpText>
        <label>MMI-Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMI_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Member Marketing Initiative Group do not call</description>
        <inlineHelpText>If this box is checked do not call because there is a relationship in local corporate.</inlineHelpText>
        <label>MMI Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMI_Manager__c</fullName>
        <inlineHelpText>The Manager assigned the the MMI Account Manager and MMI Volunteer</inlineHelpText>
        <label>MMI Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMI_Staff__c</fullName>
        <label>MMI Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_PostalCode__c</fullName>
        <formula>Preferred_Address__r.Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing PostalCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_del__c</fullName>
        <formula>Preferred_Address__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Donor_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major Donor Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Major_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatchRatio__c</fullName>
        <description>Corporate Match Ratio</description>
        <label>Match Ratio</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxContribution__c</fullName>
        <description>Maximum Contribution</description>
        <label>Max Contribution</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxMatched__c</fullName>
        <description>Maximum Matched</description>
        <label>Maximum Matched</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <inlineHelpText>Used for PressList.</inlineHelpText>
        <label>Medium</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Discount_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Participates in a member discount offer</description>
        <inlineHelpText>Check this box if this organization participates in a member discount offer</inlineHelpText>
        <label>Member Discount Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Number__c</fullName>
        <formula>TEXT(IF(TaAccountId__c &gt; 0,  TaAccountId__c  ,VALUE(Member_Number_hidden__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Number_hidden__c</fullName>
        <description>Used to create member number if TA # doesn&apos;t exist.</description>
        <displayFormat>{0000000}</displayFormat>
        <label>Member Number (hidden) - OLD</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Member_Station__c</fullName>
        <inlineHelpText>Member Station that donor contributes to.</inlineHelpText>
        <label>Member Station</label>
        <picklist>
            <picklistValues>
                <fullName>KQED</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>KQED+</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <description>Allows membership to further segment their members</description>
        <inlineHelpText>Specify current member type</inlineHelpText>
        <label>Member Type</label>
        <picklist>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hundred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archangel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Basic - 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Archangel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fringe Benefit Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Hundred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Two Hundred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Archangel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Champion I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Champion II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Champion III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Champion IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Contributions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MinContribution__c</fullName>
        <description>Minimum Contribution</description>
        <label>Min Contribution</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Drive_Never_Again__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Should we leave this account alone?</inlineHelpText>
        <label>Next Drive - Never Again</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Drive_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Should we target this account next drive?</inlineHelpText>
        <label>Next Drive Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Ac_o_G__c</fullName>
        <defaultValue>false</defaultValue>
        <description>from classifications</description>
        <inlineHelpText>if checked, there will be no acknowledgements</inlineHelpText>
        <label>No Acknowledgement of Gifts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_MEMQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>from classification</description>
        <inlineHelpText>if checked, then no MEMQ</inlineHelpText>
        <label>No MEMQ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Mail_I__c</fullName>
        <defaultValue>false</defaultValue>
        <description>from the classifications object</description>
        <inlineHelpText>if checked then no mail invitations</inlineHelpText>
        <label>No Mail Invitations?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Mem_Ca__c</fullName>
        <defaultValue>false</defaultValue>
        <description>from the classifications object</description>
        <inlineHelpText>If Checked, then no member Card will be Sent</inlineHelpText>
        <label>No Member Card?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_SD__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>These are the notes imported from SD.</inlineHelpText>
        <label>Notes SD</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <inlineHelpText>Used for PressList.</inlineHelpText>
        <label>Office Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One2OneContact__c</fullName>
        <label>_SYSTEM: One2OneContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Serial__c</fullName>
        <inlineHelpText>This is the imported Serial # from PressFile.</inlineHelpText>
        <label>Org Serial #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oth_Mail__c</fullName>
        <description>this is from classifications</description>
        <label>Other Mail</label>
        <picklist>
            <picklistValues>
                <fullName>No Capital Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Planned Giving Appeals/Solicitations</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PBS_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box to limits calls for Auction Items</inlineHelpText>
        <label>PBS Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Drive_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Did they participate in the Winter 11 “W11” Drive?</inlineHelpText>
        <label>Past Drive 1 (W11)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Drive_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Did they participate in the Winter 10 “W10” Drive?</inlineHelpText>
        <label>Past Drive 2 (W10)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Drive_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Did they participate in the Summer 09 “S09” Drive?</inlineHelpText>
        <label>Past Drive 3 (S09)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Drive_New__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Have we never worked with this Account?</inlineHelpText>
        <label>Past Drive New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Drive_Old__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Have they ever participated in a Drive?</inlineHelpText>
        <label>Past Drive Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Address__c</fullName>
        <label>Preferred Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premiums_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premiums Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>Who is the primary Contact for this Account?</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Random__c</fullName>
        <formula>VALUE( RIGHT( Random_gen__c , 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Random</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Random_gen__c</fullName>
        <displayFormat>{00}</displayFormat>
        <label>Random-gen</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Re_Mal_Gi__c</fullName>
        <description>this is from the classifications object</description>
        <label>TAG: Renewal Mail Gift</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Re_Pho_Gi__c</fullName>
        <description>this is from the classifications object</description>
        <label>TAG: Renewal Phone Gift</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rene_Mail__c</fullName>
        <description>this is from classifications</description>
        <label>Renewal Mail</label>
        <picklist>
            <picklistValues>
                <fullName>Limited Renewal Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Mail Renewal Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Renewal Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Sustainer Invite Appeals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SD_ContactID__c</fullName>
        <description>Temporary field for importing SD data.</description>
        <label>SD Contact ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ACCOUNT_ID__c</fullName>
        <displayFormat>A{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>SFDC ACCOUNT ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STS__c</fullName>
        <description>TA Status</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SYSTEMIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>_SYSTEM: IsIndividual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SYSTEM_AccountType__c</fullName>
        <inlineHelpText>System field: do not use or change.</inlineHelpText>
        <label>_SYSTEM: AccountType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <inlineHelpText>Salesforce ID which could be the same as the old Team Approach system ID</inlineHelpText>
        <label>Salesforce ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopper_Count__c</fullName>
        <label>Shopper Count</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shopper_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shopper Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <label>Account Manager/Staff</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_SD__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>What is the status of this Account for Drive Premiums?</inlineHelpText>
        <label>DP Status</label>
        <picklist>
            <picklistValues>
                <fullName>To Be Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>